<resources>
    <string name="Arrancar">Jugar</string>
    <string name="Puntuaciones">Puntuaciones</string>
    <string name="Salir">Salir </string>
    <string name="Jugar">Jugar</string>
    <string name="tituloAplicacion">RunnerGame</string>
    <string name="app_name">DanTheRunner</string>
    <string name="Preferencias"> Preferencias </string>
    <string name="puntuacion"> puntos </string>
    <string name="restart"> restart </string>
    <string name="apagar"> apagar </string>
    <string name="image_perder"> perder
 </string>

    <string-array name="spinner_items">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hell</item>
    </string-array>
</resources>