<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".MainActivity"
    android:background="@drawable/background_gradient">


    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TitleTextView"
        android:text="@string/tituloAplicacion" />

    <Button
        android:id="@+id/bt_jugar"
        style="@style/ButtonStyle"
        android:background="@drawable/gradient_buttons"
        android:text="@string/Jugar"
        android:textColorHighlight="#F1A638" />

    <Button
        android:id="@+id/bt_preferencias"
        style="@style/ButtonStyle"
        android:background="@drawable/gradient_buttons"
        android:shadowColor="#FF9800"
        android:text="@string/Preferencias" />
    <Button
        android:id="@+id/bt_puntuaciones"
        style="@style/ButtonStyle"
        android:background="@drawable/gradient_buttons"
        android:text="@string/Puntuaciones"/>
    <Button
        android:id="@+id/bt_salir"
        style="@style/ButtonStyle"
        android:background="@drawable/gradient_buttons"
        android:text="@string/Salir"/>




</LinearLayout>
